# string

./: CMakeLists.txt  README.md  main.c
string/: string_.c  string_.h  test_string_.c  test_string_.h
string/tasks/: addLastWordsS2ToS1.c  addLastWordsS2ToS1.h  alternatingWordsSentence.c  alternatingWordsSentence.h  deletePalindromeWords.c  deletePalindromeWords.h  digitsToEnd.c  digitsToEnd.h  getLastInString1FromString2.c  getLastInString1FromString2.h  getLastWordFromS1EqualS2.c  getLastWordFromS1EqualS2.h  getStringWithoutLastWord.c  getStringWithoutLastWord.h  getWordBeforeFirstWordWithA.c  getWordBeforeFirstWordWithA.h  isAllAlphasOfWordInString.c  isAllAlphasOfWordInString.h  isEqualWordsInTwoStrings.c  isEqualWordsInTwoStrings.h  isLexicallyOrderedSentence.c  isLexicallyOrderedSentence.h  nOfPalindromeWords.c  nOfPalindromeWords.h  numberTurnIntoSpaces.c  numberTurnIntoSpaces.h  printReverseWords.c  printReverseWords.h  removeExtraSpaces.c  removeExtraSpaces.h  removeNonLetters.c  removeNonLetters.h  replace.c  replace.h  reverseString.c  reverseString.h  wordsMadeOfIdenticalLetters.c  wordsMadeOfIdenticalLetters.h
